<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.appxi</groupId>
    <artifactId>javafx</artifactId>
    <version>22.07.09</version>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.release>17</maven.compiler.release>
        <javafx.version>19-ea+9</javafx.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-web</artifactId>
            <version>${javafx.version}</version>
        </dependency>

        <dependency>
            <groupId>org.appxi</groupId>
            <artifactId>shared</artifactId>
            <version>[22.02.01,)</version>
        </dependency>
        <dependency>
            <groupId>org.appxi</groupId>
            <artifactId>smartcn-convert</artifactId>
            <version>[22.06.01,)</version>
        </dependency>
        <dependency>
            <groupId>org.appxi</groupId>
            <artifactId>smartcn-pinyin</artifactId>
            <version>[22.06.01,)</version>
        </dependency>
        <dependency>
            <groupId>org.appxi</groupId>
            <artifactId>dictionary-api</artifactId>
            <version>[22.07.01,)</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.10.1</version>
                <configuration>
                    <compilerArgs>
                        <arg>--add-exports=javafx.web/com.sun.javafx.webkit=appxi.javafx</arg>
                        <arg>--add-exports=javafx.web/com.sun.webkit=appxi.javafx</arg>
                        <arg>--add-exports=javafx.web/com.sun.webkit.event=appxi.javafx</arg>
                        <arg>--add-exports=javafx.graphics/com.sun.javafx.font=appxi.javafx</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.2.1</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

</project>